--- a/.github/workflows/java-ci.yml
+++ b/.github/workflows/java-ci.yml
@@ -7,23 +7,28 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
-    
-    - name: Set up JDK 11
-      uses: actions/setup-java@v3
-      with:
-        java-version: '11'
-        distribution: 'temurin'
-        
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
-      
-    - name: Build and test
-      run: ./gradlew clean test
-      
-    - name: Upload test results
-      if: always()
-      uses: actions/upload-artifact@v3
-      with:
-        name: test-reports
-        path: build/reports/tests/test/
+      # Шаг 1: Получить код из репозитория
+      - uses: actions/checkout@v4
+
+      # Шаг 2: Установить Java
+      - name: Set up JDK 11
+        uses: actions/setup-java@v4
+        with:
+          java-version: '11'
+          distribution: 'temurin'
+
+      # Шаг 3: Дать права на выполнение gradlew
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+
+      # Шаг 4: Собрать проект и запустить тесты
+      - name: Build and test
+        run: ./gradlew clean test
+
+      # Шаг 5: Загрузить результаты тестов (всегда)
+      - name: Upload test results
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: test-reports
+          path: build/reports/tests/test/
