--- a/.github/workflows/java-ci.yml
+++ b/.github/workflows/java-ci.yml
@@ -21,16 +21,14 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
         
-# Шаг 4: Собрать и запустить приложение
-- name: Build and start application
-  run: |
-    # Запускаем приложение в фоновом режиме
-    java -jar app/build/libs/app-deadline.jar &
-      
-  # Шаг 5: выполнить тесты
-
-  - name: Run tests in headless mode
-    run: |
-      # Запускаем тесты в headless режиме
-      ./gradlew test -Dselenide.headless=true
-      
+      # Шаг 4: Собрать и запустить приложение
+      - name: Build and start application
+        run: |
+          # Запускаем приложение в фоновом режиме
+          java -jar app/build/libs/app-deadline.jar &
+        
+      # Шаг 5: Выполнить тесты
+      - name: Run tests in headless mode
+        run: |
+          # Запускаем тесты в headless режиме
+          ./gradlew test -Dselenide.headless=true
